# LayerminderV1.0

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.dev  Procfile  README.md  docker-compose.dev.yml  nixpacks.toml  pyproject.toml
layerminderBE/: __init__.py  auth.py  db.py  firebase.py  main.py  models.py  requirements.txt  run.py  schemas.py
layerminderBE/batch/: __init__.py  embedding_from_storage.py
layerminderBE/batch/embeddings/: image_embeddings.index  image_embeddings_metadata.csv
layerminderBE/core/: config.py  supabase_client.py
layerminderBE/routers/: auth.py  credits.py  generation.py  history.py  image_meta.py  image_metadata.py  image_view.py  layerroom.py  layerroom_image.py  record.py  rooms.py  streaming.py  upload.py
layerminderBE/services/: credit.py  image_generation.py  img_generation.py  openai.py  openai_img_generation.py  pipeline.py  recommedation.py  recommeder.py  recommendation.py  story_keyword_generation.py
layerminderBE/supabase/: config.toml
layerminderBE/supabase/migrations/: 20251005101105_remote_schema.sql  20251005102510_add_beta_credit_system.sql
layerminderBE/test/: test_image_generation.py
layerminderFE/: placeholder.txt
layerminderFE/frontend/: next.config.ts  package-lock.json  package.json  project_structure.txt  structure.txt
layerminderFE/frontend/src/: middleware.ts
layerminderFE/frontend/src/app/: globals.css  layout.tsx  page.tsx
layerminderFE/frontend/src/app/dashboard/: page.tsx
layerminderFE/frontend/src/components/: Gallery.tsx  MainPanel.tsx  Navigation.tsx  Sidebar.tsx  TopPanel.tsx
layerminderFE/frontend/src/components/dashboard/: Gallery.tsx  MainPanel.tsx  Navigation.tsx  RoomModal.tsx  SaveToRoomModal.tsx  Sidebar.tsx  (+1 more)
layerminderFE/frontend/src/data/: dummyData.ts
layerminderFE/frontend/src/hooks/: useAuth.tsx  useGeneration.ts  useUpload.ts
layerminderFE/frontend/src/lib/: api.ts  auth.ts  supabase.ts
layerminderFE/frontend/src/types/: index.ts
layerminderFE/frontend/src/utils/: uploadUtils.ts
(+1 files in other folders)
