[project]
name = "layerminderBE"
version = "0.1.0"
description = ""
authors = [
    {name = "Jassic",email = "answotlr54@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn[standard] (>=0.34.2,<0.35.0)",
    "firebase-admin (>=6.8.0,<7.0.0)"
]

packages = [
  { include = "layerminderBE" }
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
