[tool.poetry]
name = "layerminderBE"
version = "0.1.0"
description = ""
authors = ["Jassic <answotlr54@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
fastapi = ">=0.115.12,<0.116.0"
uvicorn = {extras = ["standard"], version = ">=0.34.2,<0.35.0"}
httpx = ">=0.28.1,<0.29.0"
pydantic-settings = ">=2.9.1,<3.0.0"
psycopg2-binary = ">=2.9.10,<3.0.0"
sqlalchemy = ">=2.0.41,<3.0.0"
openai = ">=1.88.0,<2.0.0"
supabase = ">=2.15.3,<3.0.0"
pillow = ">=11.2.1,<12.0.0"
numpy = ">=2.3.1,<3.0.0"
torch = ">=2.7.1,<3.0.0"
transformers = ">=4.53.0,<5.0.0"
faiss-cpu = ">=1.11.0,<2.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
